syntax = "proto3";

package greet;
option go_package="greet/greetpb";

message Greeting {
    string first_name =1; 
    string last_name =2;
}

message GreetRequest{
    Greeting greeting =1;

}

message GreetResponse{
    string result =1;
}


message GreetManyTimesRequest{
    Greeting greeting =1;

}

message GreetManyTimesResponse{
    string result =1;
}

service GreetService{
//Unary API Call 
rpc Greet(GreetRequest) returns (GreetResponse){};
//server streaming Great API where client has to send only one request to server and server will be keep sending chumk of data as streaming to it.
rpc GreetManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse){};
} 